[project]
name = "fastapi-rate-limiter"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "redis[hiredis]>=7.0.0",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "ruff>=0.14.2",
    "black>=25.9.0",
]
