[project]
name = "fastapi-rate-limiter"
version = "0.0.5"
description = "FastAPI-compatible Redis-backed sliding-window rate limiter"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "TradeEngage Development", email = "development@tradeengage.com" },
]
license = { text = "MIT" }
dependencies = [
    "aioredis>=2.0.1",
    "redis[hiredis]>=7.0.0",
]
[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "ruff>=0.14.2",
    "black>=25.9.0",
]
